# rocket-snippets

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: actions.yml
src/chamber_equilibrium_model/: README.md  chamber_equilibrium.py
src/chamber_equilibrium_model/helpers/: products.yaml  prop_ingredients.yaml  thermo.py
tests/: test_chamber_equilibrium.py
